--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync s3://my-react-app-01 --delete
+          aws s3 sync . s3://my-react-app-01 --delete --exclude ".git/*" --exclude "node_modules/*" --exclude ".github/*"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
