--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Deploy to EKS
         run: |
 
-          aws eks update-kubeconfig --name node-test-web --region ap-south-1
-          kubectl config set-context --current --namespace=reactprod
+          aws eks update-kubeconfig --name my-eks-cluster --region ap-south-1
+          kubectl config set-context --current --namespace=node-test-web
           kubectl apply -f /home/runner/work/node-test-web/node-test-web/.github/k8s/deployment.yaml
           kubectl apply -f /home/runner/work/node-test-web/node-test-web/.github/k8s/service.yaml
