--- a/.github/k8s/deployment.yaml
+++ b/.github/k8s/deployment.yaml
@@ -1,3 +1,11 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: web-config
+data:
+  PORT: "3001"
+  API_HOST: "http://a62c5a344dc8e49369fa8100916cd0d8-2057603871.ap-south-1.elb.amazonaws.com"
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
